2007-01-20  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-go-list-forward, c-go-list-backward):
	new functions.

2007-01-20  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-align.el, progmodes/cc-cmds.el,
	progmodes/cc-defs.el, progmodes/cc-engine.el,
	progmodes/cc-langs.el, progmodes/cc-styles.el,
	progmodes/cc-vars.el: Add my name.

2007-01-20  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (find-alternate-file): Revert query message to Emacs 21
	version.

2007-01-20  Eric Hanchrow  <offby1@blarg.net>  (tiny change)

	* progmodes/cperl-mode.el (cperl-electric-keywords): Document in
	the doc string how to use personal abbrevs without electric
	keywords.

2007-01-20  Alin C. Soare  <alinsoar@voila.fr>  (tiny change)

	* lisp/emacs-lisp/lisp-mode.el (last-sexp-toggle-display): Fixed
	cursor position when toggle abbreviated display.

2007-01-20  Nick Roberts  <nickrob@snap.net.nz>

	* t-mouse.el: Update copyright following assignment by
	Alessandro Rubini.

2007-01-20  Chong Yidong  <cyd@stupidchicken.com>

	* type-break.el (type-break-demo-hanoi, type-break-demo-life)
	(type-break-demo-boring): Call read-event instead of read-char.

2007-01-19  Daniel Pfeiffer  <occitan@esperanto.org> (small change)

	* progmodes/compile.el: Add handling for makepplog.

2007-01-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* textmodes/ispell.el (ispell-change-dictionary): Ensure that
	aspell dictionaries are initialized when called non-interactively.

2007-01-19  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-loop): New arg limit.  Handle
	case where the first error is at point-min.
	(compilation-next-error): New arg to compilation-loop call.

2007-01-18  Bruno Haible  <bruno@clisp.org> (tiny change)

	* info.el (Info-default-dirs): Change default info dir to
	share/info.

	* paths.el (Info-default-directory-list): Ditto.

2007-01-18  Chris Moore  <christopher.ian.moore@gmail.com>  (tiny change)
